tests/errors/ErrTypes3.yogur
while 1 + 2 {
	var a: Int = 4
}